unpackaged/main/default/objects/Activity/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound - Conversation</fullName>
            </value>
            <value>
                <fullName>Outbound - Voicemail</fullName>
            </value>
            <value>
                <fullName>Outbound - No answer</fullName>
            </value>
            <value>
                <fullName>Inbound - Conversation</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Pre-Sales/Engineering Task</fullName>
            </value>
            <value>
                <fullName>Account Manager Task</fullName>
            </value>
            <value>
                <fullName>Account Executive Task</fullName>
            </value>
            <value>
                <fullName>Legal Task</fullName>
            </value>
            <value>
                <fullName>Finance Task</fullName>
            </value>
            <value>
                <fullName>TPM Task</fullName>
            </value>
            <value>
                <fullName>Renewals Task</fullName>
            </value>
            <value>
                <fullName>Sales Ops Task</fullName>
            </value>
            <value>
                <fullName>BDR Task</fullName>
            </value>
            <value>
                <fullName>Technical Services Task</fullName>
            </value>
            <value>
                <fullName>Product/PM Task</fullName>
            </value>
            <value>
                <fullName>LinkedIn InMail</fullName>
            </value>
            <value>
                <fullName>VITO</fullName>
            </value>
            <value>
                <fullName>Promotional</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Active Opportunity</fullName>
                <isActive>false</isActive>
                <label>Active Opportunity</label>
            </value>
            <value>
                <fullName>Audit</fullName>
                <isActive>false</isActive>
                <label>Audit</label>
            </value>
            <value>
                <fullName>Custom Demo</fullName>
                <isActive>false</isActive>
                <label>Custom Demo</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
                <isActive>false</isActive>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Executive Level</fullName>
                <isActive>false</isActive>
                <label>Executive Level</label>
            </value>
            <value>
                <fullName>Generic Demo</fullName>
                <isActive>false</isActive>
                <label>Generic Demo</label>
            </value>
            <value>
                <fullName>Health Score Update</fullName>
                <isActive>false</isActive>
                <label>Health Score Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>