unpackaged/main/default/objects/Activity/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <label>Estimated Completion Date</label>
    <type>DateTime</type>
</CustomField>