unpackaged/main/default/objects/Activity/fields/project_cloud__Agenda_Item__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Agenda_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agenda Item</label>
    <referenceTo>project_cloud__Agenda_Item__c</referenceTo>
    <relationshipLabel>Action Items</relationshipLabel>
    <relationshipName>Action_Items</relationshipName>
    <type>Lookup</type>
</CustomField>