unpackaged/main/default/objects/Activity/fields/project_cloud__Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours__c</fullName>
    <description>The number of hours the owner has been allocated to work on the Project Task</description>
    <label>Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>